tests/ui/comparison/src/size_of_in_element_count.inline.stderr
error: found a count of bytes instead of a count of elements of `u16`
  --> tests/ui/comparison/src/size_of_in_element_count.rs:14:66
   |
LL |     unsafe { copy_nonoverlapping(x.as_mut_ptr(), y.as_mut_ptr(), size_of::<u16>() * SIZE) };
   |                                                                  ^^^^^^^^^^^^^^^^
   |
   = help: use a count of elements instead of a count of bytes, it already gets multiplied by the size of the type
   = note: `#[deny(rpl::size_of_in_element_count)]` on by default

error: found a count of bytes instead of a count of elements of `u16`
  --> tests/ui/comparison/src/size_of_in_element_count.rs:24:16
   |
LL |     let size = size_of::<u16>() * SIZE;
   |                ^^^^^^^^^^^^^^^^
   |
   = help: use a count of elements instead of a count of bytes, it already gets multiplied by the size of the type

error: found a count of bytes instead of a count of elements of `u16`
  --> tests/ui/comparison/src/size_of_in_element_count.rs:32:5
   |
LL |     base_case();
   |     ^^^^^^^^^^^
   |
   = help: use a count of elements instead of a count of bytes, it already gets multiplied by the size of the type

error: found a count of bytes instead of a count of elements of `u16`
  --> tests/ui/comparison/src/size_of_in_element_count.rs:34:5
   |
LL |     cross_statement();
   |     ^^^^^^^^^^^^^^^^^
   |
   = help: use a count of elements instead of a count of bytes, it already gets multiplied by the size of the type

error: aborting due to 4 previous errors

